fixed heading-2 alignment phone

--- a/styles/style.css
+++ b/styles/style.css
@@ -323,6 +323,7 @@ body {
   text-decoration: none;
   color: var(--text-color);
 }
+
 .footer-text a:hover {
   text-decoration: none;
   color: var(--violet);
@@ -351,6 +352,10 @@ body {
     align-items: center;
     gap: 20px;
     margin-top: 25px;
+  }
+
+  .heading-2 {
+    text-align: center;
   }
 
   .pb-img {
